<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_cart">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar"/>

    <ImageView
        android:id="@+id/burger_real_picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/real_burger_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar"
        android:layout_marginTop="20dp"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/grey"
        app:layout_constraintStart_toStartOf="@id/burger_real_picture"
        app:layout_constraintEnd_toEndOf="@id/burger_real_picture"
        app:layout_constraintTop_toBottomOf="@id/burger_real_picture"/>

    <TextView
        android:id="@+id/sanwich_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sandwich"
        app:layout_constraintTop_toBottomOf="@id/burger_real_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/store_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storeName"
        app:layout_constraintTop_toBottomOf="@id/sanwich_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/sandwich_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sandwich_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/store_name"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        />

    <TextView
        android:id="@+id/extra_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extras"
        app:layout_constraintTop_toBottomOf="@id/sandwich_description"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/sanwich_label" />

    <View
        android:id="@+id/view_two"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/extra_label"
        app:layout_constraintStart_toStartOf="@id/sanwich_label"
        app:layout_constraintEnd_toEndOf="@id/sanwich_label"
        android:background="@color/grey"/>
    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        app:layout_constraintTop_toBottomOf="@id/view_two"
        app:layout_constraintStart_toStartOf="@id/sandwich_description"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/arrow_left"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/moins_que"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/quantity"
        app:layout_constraintStart_toStartOf="@id/view_two"
        android:background="@drawable/black_empty_button"/>
    <Button
        android:id="@+id/quantity_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="10"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/quantity"
        app:layout_constraintStart_toEndOf="@id/arrow_left"
        app:layout_constraintEnd_toStartOf="@id/arrow_right"
        android:background="@drawable/black_empty_button"/>
    <Button
        android:id="@+id/arrow_right"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/plus_que"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/quantity"
        app:layout_constraintEnd_toEndOf="@id/view_two"
        android:background="@drawable/black_empty_button"/>

    <ImageView
        android:id="@+id/add_to_cart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/add_to_cart"
        app:layout_constraintTop_toBottomOf="@id/arrow_right"
        app:layout_constraintStart_toStartOf="@id/view_two"
        app:layout_constraintEnd_toEndOf="@id/view_two"/>






</androidx.constraintlayout.widget.ConstraintLayout>